force-app/main/default/objects/Sector__c/Sector__c.object-meta.xml
<CustomObject>
    <label>Sector</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Sector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>