force-app/main/default/objects/Sector__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>